fix(chip-input): align clear action button

--- a/css/src/components/chipInput.module.css
+++ b/css/src/components/chipInput.module.css
@@ -10,14 +10,14 @@
 
 .ChipInput--regular {
   padding-left: 10px;
-  padding-right: 10px;
+  padding-right: var(--spacing-15);
 }
 
 .ChipInput--small {
   align-items: center;
   min-height: var(--spacing-60);
   padding-left: var(--spacing-20);
-  padding-right: var(--spacing-20);
+  padding-right: var(--spacing-10);
 }
 
 .ChipInput:hover {
@@ -33,10 +33,6 @@
   background: var(--secondary-lightest);
   box-shadow: inset 0 0 0 var(--spacing-2-5) var(--secondary-light);
   pointer-events: none;
-}
-
-.ChipInput--withChips {
-  padding-right: 0;
 }
 
 .ChipInput--error {
